--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,79 +1,39 @@
-.wrapper {
+body {
+  background-color: gray; }
+
+.post {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  height: auto;
-  padding: 20px;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  -webkit-flex-flow: column nowrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center; }
-  .wrapper .title {
-    display: block;
-    margin: 30px 0;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 2em;
-    -webkit-flex-basis: 100%;
-        -ms-flex-preferred-size: 100%;
-            flex-basis: 100%; }
-  .wrapper .subtitle {
-    display: block;
-    margin: 10px 0;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 1.2em; }
-  .wrapper .container {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    min-height: 270px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: column wrap;
-        -ms-flex-flow: column wrap;
-            flex-flow: column wrap;
-    -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
-            justify-content: space-around;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .wrapper .container.container_height_small {
-      min-height: 150px; }
-    .wrapper .container.container_height_large {
-      min-height: 350px; }
-    .wrapper .container.container_width_full {
-      margin-top: 30px;
-      -webkit-flex-basis: 100%;
-          -ms-flex-preferred-size: 100%;
-              flex-basis: 100%; }
-    .wrapper .container .code {
-      -webkit-box-sizing: border-box;
-              box-sizing: border-box;
-      margin: 0;
-      padding: 10px 5px;
-      font-family: monospace,monospace;
-      font-size: 1em; }
-      .wrapper .container .code .com {
-        color: #999; }
-      .wrapper .container .code .tag {
-        color: #2f6f9f; }
-      .wrapper .container .code .attr {
-        color: #4f9fcf; }
-      .wrapper .container .code .name {
-        color: #d44950; }
+          align-items: center;
+  padding: 24px;
+  width: 300px;
+  height: auto; }
+
+.photo {
+  color: red; }
+
+.author {
+  color: red; }
+
+.position {
+  color: red; }
+
+.time {
+  color: red; }
+
+.text {
+  color: red; }
