--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,72 +1,27 @@
-.wrapper {
-    display: flex;
-    box-sizing: border-box;
-    width: 100%;
-    height: auto;
-    padding: 20px;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
-
-    .title {
-        display: block;
-        margin: 30px 0;
-        text-align: center;
-        vertical-align: middle;
-        font-size: 2em;
-        flex-basis: 100%;
-    }
-
-    .subtitle {
-        display: block;
-        margin: 10px 0;
-        text-align: center;
-        vertical-align: middle;
-        font-size: 1.2em;
-    }
-
-    .container {
-        display: flex;
-        min-height: 270px;
-        flex-flow: column wrap;
-        justify-content: space-around;
-        align-items: center;
-
-        &.container_height_small {
-            min-height: 150px;
-        }
-
-        &.container_height_large {
-            min-height: 350px;
-        }
-
-        &.container_width_full {
-            margin-top: 30px;
-            flex-basis: 100%;
-        }
-
-        .code {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 10px 5px;
-            font-family: monospace,monospace;
-            font-size: 1em;
-
-            .com {
-                color: #999;
-            }
-
-            .tag {
-                color: #2f6f9f;
-            }
-
-            .attr {
-                color: #4f9fcf;
-            }
-
-            .name {
-                color: #d44950;
-            }
-        }
-    }
+body {
+  background-color: gray;
+}
+.post {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+  width: 300px;
+  height: auto;
+}
+.photo {
+  color: red;
+}
+.author {
+  color: red;
+}
+.position {
+  color: red;
+}
+.time {
+  color: red;
+}
+.text {
+  color: red;
 }
